--- a/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/src/app/components/tutorials-list/tutorials-list.component.html
@@ -11,30 +11,48 @@
           <button
             class="btn btn-outline-secondary"
             type="button"
-            (click)="searchTitle()"
+            (click)="retrieveTutorials()"
           >
             Search
           </button>
         </div>
       </div>
     </div>
+
+    <div class="col-md-12">
+      <pagination-controls
+        previousLabel="Prev"
+        nextLabel="Next"
+        responsive="true"
+        (pageChange)="handlePageChange($event)"
+      ></pagination-controls>
+    </div>
+    
     <div class="col-md-6">
       <h4>Tutorials List</h4>
       <ul class="list-group">
         <li
           class="list-group-item"
-          *ngFor="let tutorial of tutorials; let i = index"
+          *ngFor="
+          let tutorial of tutorials | paginate : {
+                  itemsPerPage: pageSize,
+                  currentPage: page,
+                  totalItems: count
+                };
+          let i = index
+        "
           [class.active]="i == currentIndex"
           (click)="setActiveTutorial(tutorial, i)"
         >
           {{ tutorial.title }}
         </li>
       </ul>
+    </div>
   
       <button class="m-3 btn btn-sm btn-danger" (click)="removeAllTutorials()">
         Remove All
       </button>
-    </div>
+  <div class="mt-3">
     <div class="col-md-6">
       <div *ngIf="currentTutorial">
         <h4>Tutorial</h4>
@@ -54,6 +72,13 @@
           Edit
         </a>
       </div>
+      Items per Page:
+      <select (change)="handlePageSizeChange($event)">
+        <option *ngFor="let size of pageSizes" [ngValue]="size">
+          {{ size }}
+        </option>
+      </select>
+    </div>
   
       <div *ngIf="!currentTutorial">
         <br />
